--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
         "project_name": "코로나 뷰어",
         "project_plarform": "web",
         "project_image": "https://user-images.githubusercontent.com/48292190/107874416-f8357900-6efc-11eb-8c5a-8b0adeb3ae19.png",
-        "project_stack": ["React", "Recoil", "Scss", "Axios"],
+        "project_stack": ["React", "Recoil", "Scss", "Axios", "typescript"],
         "project_explanation": "전국 코로나 현황을 보여주는 웹사이트입니다.",
         "project_productionPeriod": "2021-2-14~2021-2-14"
     },
